# it

./: .rustfmt.toml  COPYING  Cargo.toml  README.md  TODO
Documentation/: Makefile  getting-started.adoc  monospace.css  spec.adoc
LICENSES/: OpenSSL
LICENSES/exceptions/: openvpn-openssl-exception
src/: bundle.rs  cfg.rs  cmd.rs  error.rs  fs.rs  git.rs  http.rs  io.rs  iter.rs  json.rs  keys.rs  lib.rs  metadata.rs  patches.rs  serde.rs  ssh.rs  str.rs
src/bundle/: error.rs  fetch.rs  header.rs  list.rs
src/cmd/: drop.rs  id.rs  mergepoint.rs  patch.rs  topic.rs  ui.rs  util.rs
src/cmd/drop/: bundles.rs  edit.rs  init.rs  serve.rs  show.rs  snapshot.rs  unbundle.rs
src/cmd/drop/bundles/: prune.rs  sync.rs
src/cmd/id/: edit.rs  init.rs  show.rs  sign.rs
src/cmd/patch/: create.rs  prepare.rs
src/cmd/topic/: comment.rs  ls.rs  show.rs  unbundle.rs
src/cmd/ui/: editor.rs  output.rs
src/cmd/util/: args.rs
src/git/: commit.rs  config.rs  refs.rs  repo.rs  serde.rs
src/json/: canonical.rs
src/metadata/: drop.rs  error.rs  git.rs  identity.rs  mirrors.rs
src/patches/: bundle.rs  error.rs  iter.rs  notes.rs  record.rs  state.rs  submit.rs  traits.rs
src/ssh/: agent.rs
